# job-kick

./: .gitignore  LICENSE  README.md  pyproject.toml
src/job_kick/cli/: main.py
src/job_kick/core/: config.py  errors.py  guards.py  models.py  profile.py  storage.py
src/job_kick/core/configure/: registry.py  step.py  wizard.py
src/job_kick/core/configure/steps/: default_source.py  llm_provider.py  profile.py
src/job_kick/llm/: __init__.py  client.py  prompts.py
src/job_kick/sources/: base.py  registry.py
src/job_kick/sources/linkedin/: auth.py  client.py  parser.py  source.py
